AG-6644 Fix API docs expanded code misalignment

--- a/grid-packages/ag-grid-docs/documentation/src/components/expandable-snippet/ExpandableSnippet.module.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/components/expandable-snippet/ExpandableSnippet.module.scss
@@ -97,5 +97,9 @@ $indent: 24px;
         white-space: normal;
         hyphens: initial;
         cursor: text;
+
+        code {
+            line-height: calc(1.275rem - 2px);
+        }
     }
 }
